# llmstruct

./: .cursorrules  .gitattributes  .gitignore  .gitmessage  AI_CLI_INSTRUCTIONS.md  AI_INTEGRATION_SETUP_GUIDE.md  AI_TESTING_INSTRUCTIONS.md  AI_VSCODE_INSTRUCTIONS.md  BOT_FUNCTIONALITY_REPORT.md  CHANGELOG.md  COMMIT_MESSAGE.md  COMPREHENSIVE_PROJECT_OVERVIEW.md  CRITICAL_SESSION_STATE_2025-05-28.md  CURSOR_AI_EXAMPLES.md  CURSOR_EVALUATION_PLAN.md  Dockerfile  FINAL_ARCHITECTURE_STRATEGY.md  FINAL_CLEANUP_REPORT.md  GITHUB_PROJECTS_README.md  GROK_REVIEW_REQUEST.md  IDEAS_TASKS_ORGANIZATION_PLAN.md  LICENSE  LLM_CONTEXT_CAPABILITY_TESTING_COMPLETION_REPORT.md  LLM_CONTEXT_CAPABILITY_TESTING_PLAN.md  MEGAPROJECT_PR_DESCRIPTION.md  META_SESSION_AI_IMPLEMENTATION.md  META_SESSION_PLAN.md  META_WORKING_NOTE.md  MODULAR_CLI_COMPLETION_REPORT.md  MODULE_ANALYSIS_SYSTEM_GUIDE.md  PR_DESCRIPTION.md  PR_SUMMARY.md  QUICK_START.md  README.md  README_GITHUB_ROLLOUT.md  SEAMLESS_AI_INTEGRATION_PLAN.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SESSION_INTEGRATION_REPORT.md  SESSION_MANAGEMENT_GUIDE.md  SESSION_TASKS.md  (+101 more)
.ORCHESTRATOR_PLAN/: MASTER_ORCHESTRATOR_PLAN.md  quick_commands.sh  readiness_test.sh
.PHOENIX/: duplicates_report.json  duplicates_sample.json  executable_phoenix_plan.py  phase0_log.md
.RESTRUCTURIZATION_PLAN/: PHOENIX_EXECUTION_PLAN.md  PHOENIX_PROMPT_LIBRARY.md  expert_analysis_response.md
.github/: CODEOWNERS
.llmstruct_cache/: cache.db  class_index.json  function_index.json  metadata.json  module_index.json
.metrics/: aggregate_metrics.json
.private/: ai_ecosystem_roadmap.md  context_insights.json  fastapi_design_sheet_02_implementation.md  fastapi_design_sheet_03_migration_plan.md  fastapi_implementation_plan.md  log_insight.py  project_assessment_2024-03-26.md  workflow_meta_learning.md
ARCHIVE/: auto_init_ai_system.py  pr_body.md  verify_llm_response.py
TODO/: ast_fallback.md  llmstruct_workflow_meta.md
cursor_workflow_integration/: README.md
data/: ai_diagnostics_report.json  ai_integration_config.json  ai_workflow.json  artifacts_index.json  cli.json  cli_queue.json  concept.json  conflicts.json  context_orchestration.json  copilot_init.json  developer_onboarding.json  docs.json  gh_mapping.json  ideas.json  ideas.json.audit_backup_1748093632  ideas.json.audit_backup_1748093655  ideas_cache.json  index.json  init.json  init_enhanced.json  insights.json  project_manifest.json  prompts_collection.json  prs.json  references.json  struct.json  tags_reference.json  tasks.json  tasks.json.audit_backup_1748093655  user_memory.json  vision.json  weights.json  workflow_events.json
data.old/: docs.json  ideas.json  index.json
data_backup_20250524_030151/: artifacts_index.json  cli.json  cli_queue.json  init.json  insights.json  metrics.json  tasks.json  weights.json
docs/: AI_DOGFOODING_PLANNING_MEMO.md  AI_SESSION_MOBILE_CONTROL.md  AI_WORKFLOW_ARCHITECTURE.md  BEST_PRACTICES_LLMSTRUCT.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_INDEX.json  CONTEXT_TAGS_SYSTEM.md  CONTRIBUTING.md  COPILOT_INTEGRATION_CLARIFICATION_QUESTIONS.md  CURSOR_AI_INTEGRATION.md  GITHUB_ROLLOUT_STRATEGY.md  GITHUB_TOKEN_SETUP.md  JSON_OPTIMIZATION_CLARIFICATIONS.md  LLM_instructions_api.md  ONBOARDING_LLMSTRUCT.md  PRIORITY_DASHBOARD.md  PROMPTS_FOR_AI.md  SECURITY.md  STRATEGIC_ROADMAP_2025.md  TASKS_AND_IDEAS_REASSESSMENT.md  WORKFLOW_LLMSTRUCT_EPIC_MANAGEMENT.md  WORKFLOW_LLMSTRUCT_PROMPT_ARCH.md  WORKFLOW_METRICS_INTEGRATION.md  ai-constraints-implementation-report.md  best_practices.md  cli.md  context_orchestration_architecture.md  copilot_integration.md  github_projects_export.md  hybrid_log.md  ideas_community.md  ideas_strategy.md  ideas_technical.md  incremental_indexing_plan.markdown  integration.md  interactions_diagram.ru.md  llmstruct_config.md  llmstruct_format.md  manifesto.md  onboarding.md  (+2 more)
docs/.TO_REVIEW/: AI_DOGFOODING_FINAL_PLAN.md  AI_INTEGRATION_REALITY_CHECK.md  CONTRIBUTING.md  COPILOT_INTEGRATION_RESEARCH_NOTES.md  CURSOR_ECOSYSTEM_TECHNICAL_ASSESSMENT.md  HIDDEN_GEMS_ANALYSIS.md  INTEGRATION_AND_WORKFLOW_CLARIFICATIONS.md  JSON_OPTIMIZATION_FINAL_PLAN.md  JSON_SYSTEM_OPTIMIZATION_RESEARCH.md  MISSING_INNOVATIONS_SUMMARY.md  QUICK_START_GUIDE.md  TASKS_INDEX.json  TASKS_SUMMARY.md  TASK_IDEA_CONSOLIDATION_WORK_NOTE.md  TASK_MANAGEMENT_SYSTEM.md  TPOT_DEPLOYMENT_WORK_PLAN.md  cli_modular_architecture.md  docs_internal_roadmap.markdown  gh_view.md  github_projects_export.md  integration.md  json_selector.py  llmstruct_config.md  llmstruct_decision_checklist.md  llmstruct_format.md  onboarding.md  pyproject.toml  self_run.py  test_self_run.py
epics/: EPIC-1-AI-BRANCH-SAFETY-SYSTEM.md  EPIC-2-AI-SESSION-MANAGEMENT.md  EPIC-3-ENHANCED-DOGFOOD-COMMAND.md  EPIC-4-RISK-BASED-DEVELOPMENT-WORKFLOW.md  README.md  epics_data.json
event_log/: meta-log
examples/: python_project_main.py  python_project_utils.py
grok_consultations/: 01_architect_consultation.md  02_prompt_engineer_consultation.md  04_project_manager_consultation.md  05_final_consensus.md
grok_consultations_series_2/: 00_master_context_for_grok.md  01_ollama_strategic_consultation_analysis.md  02_ollama_integration_strategy.md  03_project_cleanup_analysis.md  FINAL_STRATEGIC_DECISION.md  SERIES_2_LAUNCH_SUMMARY.md  comprehensive_analysis_context.md  comprehensive_ollama_context.json  enhanced_ollama_context_with_structure.json  enhanced_ollama_context_with_structure_fixed.json  enhanced_ollama_context_with_structure_v2.json  fixed_ollama_context.json  improved_ollama_context.json  minimal_ollama_context.json  ollama_models_analysis.json  ollama_models_context_for_grok.json  updated_comprehensive_context.md
(+550 files in other folders)
