[project]
name = "llmstruct"
version = "0.1.0"
description = "A tool for generating JSON-based code structure for LLM integration"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "LLMStruct Contributors"}
]
dependencies = [
    "jsonschema>=4.17.0",
    "esprima>=4.0.1"
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.2.0"
]

[project.scripts]
llmstruct = "llmstruct.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "llmstruct",
    "llmstruct.generators",
    "llmstruct.parsers",
    "llmstruct.validators",
    "llmstruct.templates"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"