[project]
name = "llmstruct"
version = "0.1.0"
description = "Utility for generating structured JSON for codebases"
authors = [
    { name = "Mikhail Stepanov", email = "kpblcaoo@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "toml>=0.10.2",
    "esprima>=4.0.1",
    "jsonschema>=4.17.3"
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "mypy>=0.991",
    "flake8>=6.0.0",
    "black>=22.10.0",
    "isort>=5.10.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/kpblcaoo/llmstruct"
Repository = "https://github.com/kpblcaoo/llmstruct"
Issues = "https://github.com/kpblcaoo/llmstruct/issues"