[project]
name = "llmstruct"
version = "0.2.0"
description = "Utility for generating structured JSON for codebases"
authors = [
    { name = "Mikhail Stepanov", email = "kpblcaoo@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "toml>=0.10.2",
    "esprima>=4.0.1",
    "jsonschema>=4.17.3",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "python-dotenv>=0.20.0",
    "ijson>=3.1.4"
]
license = { text = "GPL-3.0" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.20.0",
    "mypy>=0.991",
    "flake8>=6.0.0",
    "black>=22.10.0",
    "isort>=5.10.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/kpblcaoo/llmstruct"
Repository = "https://github.com/kpblcaoo/llmstruct"
Issues = "https://github.com/kpblcaoo/llmstruct/issues"

[tool.setuptools]
packages = ["llmstruct", "llmstruct.generators", "llmstruct.validators"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
llmstruct = ["*.py", "*.toml"]